<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WeatherActivity!</string>
    <string name="app_name">WeatherAndroidClient</string>
    <string name="hintDateFrom">Date from</string>
    <string name="hintDateTo">Date to</string>
    <string name="titleShow">Show chart</string>
    <string name="titlePrefApiUrl">Api url</string>
    <string name="summaryPrefApiUrl">Url to api of service</string>
    <string name="titlePrefs">Preferences</string>
    <string name="labelDateFrom">Date from</string>
    <string name="labelDateTo">Date to</string>
    <string name="labelType">Type</string>
    <string name="labelGrouping">Grouping</string>
    <string name="titleList">List</string>
    <string name="titleSearch">Search</string>
    <string name="titleClear">Clear</string>

</resources>