<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
     >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/cityInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="false" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1" >

            <TableRow android:layout_width="fill_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginRight="10sp"
                    android:gravity="right"
                    android:text="@string/labelDateFrom"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/dateFromInput"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintDateFrom"
                    android:inputType="date" />
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginRight="10sp"
                    android:gravity="right"
                    android:text="@string/labelDateTo"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/dateToInput"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintDateTo"
                    android:inputType="date" />
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginRight="10sp"
                    android:gravity="right"
                    android:text="@string/labelType"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/typeInput"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow android:layout_width="fill_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginRight="10sp"
                    android:gravity="right"
                    android:text="@string/labelGrouping"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/groupInput"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/showButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleShow" />
    </LinearLayout>

</ScrollView>